# Yarok

./: .gitignore  CLAUDE.md  README.md  critique-01-my-reports-list.md  critique-02-report-card-view.md  critique-03-map-clustering-location-bug.md  critique-04-my-vs-all-reports.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_view_count.py  003_password_reset_tokens.py
backend/scripts/: purge_reports.py
backend/src/: config.py  database.py  main.py  storage.py
backend/src/api/v1/: admin.py  auth.py  debug.py  geocode.py  media.py  reports.py
backend/src/middleware/: security.py
backend/src/models/: __init__.py  base.py  media.py  notification.py  password_reset.py  report.py  user.py
backend/src/schemas/: media.py  report.py  user.py
backend/src/services/: __init__.py  auth.py  email.py  password_reset.py  purge.py
backend/src/utils/: encryption.py
backend/tests/: conftest.py  test_admin_endpoints.py  test_auth_endpoints.py  test_auth_service.py  test_debug_endpoints.py  test_encryption.py  test_geocode.py  test_health.py  test_media_endpoints.py  test_report_endpoints.py  test_schemas.py
docker/postgres/: 01-init-postgis.sql
docs/: RAILWAY_PURGE_DATABASE.md  RAILWAY_STORAGE_SETUP.md  SETUP_LOCAL.md
mobile/: .env.example  .gitignore  Dockerfile  app.json  jest.config.js  metro.config.js  package-lock.json  package.json  railway.toml
mobile/__tests__/: api.test.ts  auth.test.ts  (+4 more)
mockups/: yarok-app-mockup.html
(+44 files in other folders)
